Updated called to assemble_65c02 in cmake; added ZP_START and ZPn sizes; reformatted lcd.s

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,2 @@
 file(GLOB SRC_FILES "*.s")
-assemble_65c02(msbasic msbasic.s DEFINES plbs DEPENDS ${SRC_FILES})
+assemble_65c02(msbasic SOURCES msbasic.s DEFINES plbs DEPENDS ${SRC_FILES})
